2011-05-10  Alexis Menard  <alexis.menard@openbossa.org>

Reviewed by Antonio Gomes.

        Warning fix on PluginPackage.cpp.
        https://bugs.webkit.org/show_bug.cgi?id=60371

        Warning fix on conversion from time_t to unsigned on Linux with GCC 4.6.0.
        Let's use a struct rather than an array so we can pass everything to StringHasher.

        * plugins/PluginPackage.cpp:
        (WebCore::PluginPackage::hash):

Canonical link: https://commits.webkit.org/75817@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86153 268f45cc-cd09-0410-ab3c-d52691b4dbfc